update restfully example..